corpus/contextual-keywords.txt
=======================================
From keyword can be a variable
=======================================

var a = Assert.Range(from, to);

---

(compilation_unit 
  (global_statement 
    (local_declaration_statement 
      variable_declaration: (variable_declaration 
        type: (implicit_type )
        (variable_declarator 
          identifier: (identifier )
          value: (equals_value_clause 
            (invocation_expression 
              function: (member_access_expression 
                expression: (identifier )
                name: (identifier ))
              arguments: (argument_list 
                (argument 
                  (identifier ))
                (argument 
                  (identifier ))))))))))
