corpus/identifiers.txt
=======================================
basic indentifiers
=======================================

int x = y;

---

(compilation_unit 
  (global_statement 
    (local_declaration_statement 
      variable_declaration: (variable_declaration 
        type: (predefined_type )
        (variable_declarator 
          identifier: (identifier )
          value: (equals_value_clause 
            (identifier )))))))

=======================================
indentifiers with keyword names
=======================================

int @var = @const;

---

(compilation_unit 
  (global_statement 
    (local_declaration_statement 
      variable_declaration: (variable_declaration 
        type: (predefined_type )
        (variable_declarator 
          identifier: (identifier )
          value: (equals_value_clause 
            (identifier )))))))

=======================================
indentifiers with contextual keyword names
=======================================

int nint = 0;
int nuint = 0;

---

(compilation_unit 
  (global_statement 
    (local_declaration_statement 
      variable_declaration: (variable_declaration 
        type: (predefined_type )
        (variable_declarator 
          identifier: (identifier )
          value: (equals_value_clause 
            (integer_literal ))))))
  (global_statement 
    (local_declaration_statement 
      variable_declaration: (variable_declaration 
        type: (predefined_type )
        (variable_declarator 
          identifier: (identifier )
          value: (equals_value_clause 
            (integer_literal )))))))
